# jenga

./: .gitmodules  .travis.yml  ChangeLog.md  LICENSE  Readme.md  jenga.cabal  jenga.lock-7.10.3  jenga.lock-8.0.2  jenga.lock-8.2.2
Jenga/: Cabal.hs  Git.hs  HTTP.hs  IO.hs  Merge.hs  PackageList.hs  Render.hs  Stack.hs  Types.hs
Jenga/Git/: Command.hs  SubModules.hs
main/: jenga.hs
src/: Jenga.hs
src/Jenga/: Cabal.hs  Config.hs  Git.hs  HTTP.hs  IO.hs  Merge.hs  PackageList.hs  Render.hs  Stack.hs  Types.hs
src/Jenga/Git/: Command.hs  Process.hs  SubModules.hs
test/: test-cli.hs  test.hs
test/Test/Jenga/: Config.hs  Gen.hs  Stack.hs
test/cli/core/: runner
test/cli/genlock/: run
test/cli/genlock/data/: stack.yaml
test/cli/genlock/expected/: first.lock-8.0.2
test/cli/git-extra-dep/: run
test/cli/git-extra-dep/data/: git-extra-dep.cabal  init-simple.cabal  stack.yaml
test/cli/git-extra-dep/expected/: git-extra-dep.lock-8.0.2
test/cli/init-drop-deps/: run
test/cli/init-drop-deps/data/: init-drop-deps.cabal  stack.yaml
test/cli/init-drop-deps/expected/: init-drop-deps.lock-8.0.2  jenga.yaml
test/cli/init-extra-deps/: run
test/cli/init-extra-deps/data/: stack.yaml
test/cli/init-extra-deps/expected/: init-extra-deps.lock-8.0.2  jenga.yaml
test/cli/init-freeze/: run
test/cli/init-freeze/data/: init-freeze.cabal
test/cli/init-freeze/expected/: cabal.config  jenga.yaml
test/cli/init-simple/: run
test/cli/init-simple/data/: stack.yaml
test/cli/init-simple/expected/: init-simple.lock-8.0.2
test/cli/init-specific/: run
test/cli/init-specific/data/: init-specific.cabal  stack-specific.yaml  stack.yaml
test/cli/init-specific/expected/: init-specific.lock-8.2.2
test/cli/init-submodules/: run
test/cli/init-submodules-dir/: run
test/cli/init-submodules-dir/data/: init-submodules-dir.cabal  stack.yaml
test/cli/init-submodules/data/: init-submodules.cabal
test/cli/init-submodules/expected/: init-submodules.lock-8.0.2
test/cli/parse-jenga-config/: run
test/cli/parse-jenga-config/data/: jenga-0001.yaml  jenga-0002.yaml
test/cli/parse-jenga-config/expected/: jenga-0001.json  jenga-0002.json  stack-0002.json  stack-0003.json
test/cli/parse-stack-config/: run
test/cli/parse-stack-config/data/: stack-0001.yaml  stack-0002.yaml  stack-0003.yaml  stack-0004.yaml  stack-0005.yaml
test/cli/parse-stack-config/expected/: stack-0001.json  stack-0002.json  stack-0003.json  stack-0004.json  stack-0005.json
test/cli/setup/: run
test/cli/setup/data/: setup-test.cabal  stack.yaml
test/cli/setup/expected/: setup-test.lock-8.0.2
test/cli/update/: run
test/cli/update/data/: stack-7.0.yaml  stack-9.1.yaml  update.cabal
test/cli/update/expected/: jenga-7.0.yaml  jenga-9.1.yaml  jenga.yaml  update.lock-8.0.1  update.lock-8.0.2
