name:                init-specific
version:             0.0.0
synopsis:            A test project for jenga

description:         The simplest possible combination of a cabal file and a
                     stack.yaml file. The stack file specifies the stack
                     resolver version and nothing more.

license:             MIT
license-file:        LICENSE
author:              Erik de Castro Lopo
maintainer:          erikd@mega-nerd.com
category:            Test
build-type:          Simple
cabal-version:       >= 1.10

library
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010
  hs-source-dirs:      src

  exposed-modules:     Test.Jenga.Init.Simple

  build-depends:       base
                     , binary
                     , bytestring
                     , containers
                     , directory
                     , exceptions
                     , extra
                     , filepath
                     , time
